--- a/.github/workflows/core/python-review-gate.yml
+++ b/.github/workflows/core/python-review-gate.yml
@@ -2,6 +2,15 @@ name: Python Review Gate
 
 on:
   workflow_call:
+    inputs:
+      project:
+        required: true
+        type: string
+        description: GitHub repository (owner/repo format)
+      pr-number:
+        required: true
+        type: number
+        description: Pull request number
     secrets:
       ANTHROPIC_API_KEY:
         required: true
@@ -22,6 +31,19 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Checkout Claude agents
+        uses: actions/checkout@v4
+        with:
+          repository: WasteHero/claude-development-environment
+          path: .claude-dev-env
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Setup Claude agents
+        run: |
+          mkdir -p .claude/agents
+          cp .claude-dev-env/agents/py-quality.md .claude/agents/
+          cp .claude-dev-env/agents/py-reviewer.md .claude/agents/
+
       - name: Run Python code review with Claude
         id: code-review
         uses: anthropics/claude-code-action@v1
@@ -36,44 +58,30 @@ jobs:
             - Security vulnerabilities
             - Test coverage
 
-            Output findings in this format:
-            - Issue category (Quality/Performance/Security/Testing)
-            - Issue description
-            - File and line number
-            - Recommended fix
-
-            If NO significant issues found, output: "✅ No significant issues found in code review"
-          claude_args: "--model claude-haiku-4-5-20251001 --max-turns 5"
+            Return a structured response with:
+            - has_issues: boolean indicating if any issues were found
+            - summary: detailed description of findings categorized by type (or success message if none)
+            - issue_count: total number of issues found
+          claude_args: |
+            --model claude-haiku-4-5-20251001 --max-turns 5 --json-schema '{"type":"object","properties":{"has_issues":{"type":"boolean"},"summary":{"type":"string"},"issue_count":{"type":"number"}},"required":["has_issues","summary","issue_count"]}'
 
       - name: Post review findings to PR
         if: always()
         uses: actions/github-script@v7
         with:
           script: |
-            const output = `${{ steps.code-review.outputs.result }}`;
+            const result = JSON.parse('${{ steps.code-review.outputs.structured_output }}');
+            const [owner, repo] = '${{ inputs.project }}'.split('/');
 
             github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: `## Python Code Review\n\n${output}`
+              issue_number: ${{ inputs.pr-number }},
+              owner: owner,
+              repo: repo,
+              body: `## 🔍 Python Code Review\n\n${result.summary}\n\n**Issues Found**: ${result.issue_count}`
             });
 
-      - name: Determine review gate result
-        id: review-result
-        run: |
-          output="${{ steps.code-review.outputs.result }}"
-
-          if [[ "$output" == *"No significant issues found"* ]]; then
-            echo "result=pass" >> $GITHUB_OUTPUT
-            echo "Review gate PASSED: No significant issues found"
-          else
-            echo "result=fail" >> $GITHUB_OUTPUT
-            echo "Review gate FAILED: Issues found"
-          fi
-
       - name: Fail workflow if issues found
-        if: steps.review-result.outputs.result == 'fail'
+        if: fromJSON(steps.code-review.outputs.structured_output).has_issues == true
         run: |
-          echo "Review gate failed - issues detected during code review"
+          echo "Review gate failed - ${{ fromJSON(steps.code-review.outputs.structured_output).issue_count }} issues detected during code review"
           exit 1
