--- a/.github/actions/wait-for-service/action.yml
+++ b/.github/actions/wait-for-service/action.yml
@@ -21,6 +21,11 @@ inputs:
     required: false
     default: '2'
 
+outputs:
+  ready:
+    description: 'Service readiness status (true/false)'
+    value: ${{ steps.wait.outputs.ready }}
+
 runs:
   using: 'composite'
   steps:
@@ -52,6 +57,7 @@ runs:
               if command -v pg_isready &>/dev/null; then
                 if pg_isready -h "${HOST}" -p "${PORT}" >/dev/null 2>&1; then
                   echo "${SERVICE_TYPE} is ready!"
+                  echo "ready=true" >> $GITHUB_OUTPUT
                   exit 0
                 fi
               else
@@ -63,6 +69,7 @@ runs:
               if command -v mongosh &>/dev/null; then
                 if mongosh --host "${HOST}" --port "${PORT}" --eval "db.adminCommand('ping')" &>/dev/null; then
                   echo "${SERVICE_TYPE} is ready!"
+                  echo "ready=true" >> $GITHUB_OUTPUT
                   exit 0
                 fi
               else
@@ -75,12 +82,14 @@ runs:
               if command -v nc &>/dev/null; then
                 if nc -zv "${HOST}" "${PORT}" &>/dev/null; then
                   echo "${SERVICE_TYPE} is ready!"
+                  echo "ready=true" >> $GITHUB_OUTPUT
                   exit 0
                 fi
               else
                 # Fallback to bash /dev/tcp
                 if bash -c "</dev/tcp/${HOST}/${PORT}" &>/dev/null; then
                   echo "${SERVICE_TYPE} is ready!"
+                  echo "ready=true" >> $GITHUB_OUTPUT
                   exit 0
                 fi
               fi
@@ -97,4 +106,5 @@ runs:
         done
 
         echo "ERROR: ${SERVICE_TYPE} not ready after ${MAX_RETRIES} attempts"
+        echo "ready=false" >> $GITHUB_OUTPUT
         exit 1
