fix: add check subcommand to ty invocation
The ty type checker requires a subcommand (check, server, version).
Updated from 'uv run ty' to 'uv run ty check'.

#CT-1191 #time 5m

--- a/.github/workflows/python-type-check.yml
+++ b/.github/workflows/python-type-check.yml
@@ -48,5 +48,5 @@ jobs:
         shell: bash
 
       - name: Run type checker
-        run: uv run ty
+        run: uv run ty check
         shell: bash
