fix: type-check only src/ and tests/ directories
Changed from 'ty check' (checks all files) to 'ty check src/ tests/'
to exclude examples/ and scripts/ directories.

#CT-1191 #time 5m

--- a/.github/workflows/python-type-check.yml
+++ b/.github/workflows/python-type-check.yml
@@ -48,5 +48,5 @@ jobs:
         shell: bash
 
       - name: Run type checker
-        run: uv run ty check
+        run: uv run ty check src/ tests/
         shell: bash
