fix: update job name to 'Type Check with ty'
Changed job display name from 'Type Check with pyright/mypy' to
'Type Check with ty' to accurately reflect the type checker being used.

#CT-1191 #time 2m

--- a/.github/workflows/python-type-check.yml
+++ b/.github/workflows/python-type-check.yml
@@ -15,7 +15,7 @@ permissions:
 
 jobs:
   python-type-check:
-    name: Type Check with pyright/mypy
+    name: Type Check with ty
     runs-on: [self-hosted, linux, X64, kubernetes]
 
     steps:
