fix: handle empty/failed Claude output gracefully in quality-gate
Added error handling for quality-gate workflow:
- Check if structured_output is not empty before parsing
- Try-catch around JSON parsing
- Only post comment if output is valid
- Fail gracefully with error message if parsing fails

This prevents 'Unexpected end of JSON input' errors when Claude
action doesn't produce output.

#CT-1191 #time 10m

--- a/.github/workflows/python-quality-gate.yml
+++ b/.github/workflows/python-quality-gate.yml
@@ -60,22 +60,32 @@ jobs:
             --model claude-haiku-4-5-20251001 --max-turns 3 --json-schema '{"type":"object","properties":{"has_issues":{"type":"boolean"},"summary":{"type":"string"},"issue_count":{"type":"number"}},"required":["has_issues","summary","issue_count"]}'
 
       - name: Post quality analysis to PR
-        if: always()
+        if: always() && steps.quality-analysis.outputs.structured_output != ''
         uses: actions/github-script@v7
         with:
           script: |
-            const result = JSON.parse('${{ steps.quality-analysis.outputs.structured_output }}');
-            const [owner, repo] = '${{ inputs.project }}'.split('/');
+            try {
+              const output = '${{ steps.quality-analysis.outputs.structured_output }}';
+              if (!output || output === '') {
+                console.log('No structured output from quality analysis');
+                return;
+              }
+              const result = JSON.parse(output);
+              const [owner, repo] = '${{ inputs.project }}'.split('/');
 
-            github.rest.issues.createComment({
-              issue_number: ${{ inputs.pr-number }},
-              owner: owner,
-              repo: repo,
-              body: `## ❌ Python Quality Gate Analysis\n\n${result.summary}\n\n**Issues Found**: ${result.issue_count}`
-            });
+              await github.rest.issues.createComment({
+                issue_number: ${{ inputs.pr-number }},
+                owner: owner,
+                repo: repo,
+                body: `## 🔍 Python Quality Gate Analysis\n\n${result.summary}\n\n**Issues Found**: ${result.issue_count}`
+              });
+            } catch (error) {
+              console.error('Failed to parse or post quality analysis:', error);
+              core.setFailed('Quality analysis output parsing failed');
+            }
 
       - name: Fail workflow if issues found
-        if: fromJSON(steps.quality-analysis.outputs.structured_output).has_issues == true
+        if: steps.quality-analysis.outputs.structured_output != '' && fromJSON(steps.quality-analysis.outputs.structured_output).has_issues == true
         run: |
           echo "Quality gate failed - ${{ fromJSON(steps.quality-analysis.outputs.structured_output).issue_count }} issues detected in Python code"
           exit 1
