fix: use GH_TOKEN secret for private repository access
AI gates need access to claude-development-environment (private repo).
Default GITHUB_TOKEN doesn't have cross-repository access.

Changes:
- Added optional GH_TOKEN secret parameter to both workflows
- Falls back to GITHUB_TOKEN if GH_TOKEN not provided
- Allows using a PAT with proper permissions

Workflows updated:
- python-quality-gate.yml
- python-review-gate.yml

#CT-1191 #time 10m

--- a/.github/workflows/python-quality-gate.yml
+++ b/.github/workflows/python-quality-gate.yml
@@ -15,6 +15,9 @@ on:
       ANTHROPIC_API_KEY:
         required: true
         description: Anthropic API key for Claude Code
+      GH_TOKEN:
+        required: false
+        description: GitHub token with access to private repositories (for claude-development-environment)
 
 permissions:
   contents: read
@@ -36,7 +39,7 @@ jobs:
         with:
           repository: WasteHero/claude-development-environment
           path: .claude-dev-env
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GH_TOKEN || secrets.GITHUB_TOKEN }}
 
       - name: Setup Claude agents
         run: |
