--- a/.github/workflows/python-review-gate.yml
+++ b/.github/workflows/python-review-gate.yml
@@ -50,7 +50,7 @@ jobs:
 
       - name: Install Claude Code
         run: |
-          curl -fsSL https://claude.ai/install.sh | sh
+          curl -fsSL https://claude.ai/install.sh | bash
           echo "$HOME/.local/bin" >> $GITHUB_PATH
 
       - name: Run Python code review with Claude
