Improve success detection in AI quality gates
Add more patterns to detect successful quality analysis:
- 'production-ready'
- 'Excellent'
- 'No Critical Issues'

The grep patterns now properly detect when code quality is good
and don't fail the gate unnecessarily.

--- a/.github/workflows/python-quality-gate.yml
+++ b/.github/workflows/python-quality-gate.yml
@@ -76,7 +76,7 @@ jobs:
 
           # Parse the output to determine if issues were found
           ANALYSIS=$(cat /tmp/quality-analysis.txt)
-          if echo "$ANALYSIS" | grep -qi "All checks passed\|0 errors\|no issues"; then
+          if echo "$ANALYSIS" | grep -qi "All checks passed\|0 errors\|no issues\|No Critical Issues\|production-ready\|Excellent"; then
             echo "has_issues=false" >> $GITHUB_OUTPUT
             echo "summary<<EOF" >> $GITHUB_OUTPUT
             echo "$ANALYSIS" >> $GITHUB_OUTPUT
