Add agent verification step to debug agent loading
Add logging and verification to ensure agents are properly copied:
- List agents after copying
- Verify py-quality.md exists before running Claude
- Fail fast if agent files aren't found

This will help diagnose why @agent-py-quality isn't being found.

--- a/.github/workflows/python-quality-gate.yml
+++ b/.github/workflows/python-quality-gate.yml
@@ -47,11 +47,23 @@ jobs:
           mkdir -p .claude/agents || true
           cp .claude-dev-env/agents/py-quality.md .claude/agents/ 2>/dev/null || true
           cp .claude-dev-env/agents/py-reviewer.md .claude/agents/ 2>/dev/null || true
+          echo "Agents copied:"
+          ls -la .claude/agents/ || echo "No agents directory"
 
       - name: Install Claude Code
         run: |
           curl -fsSL https://claude.ai/install.sh | bash
           echo "$HOME/.local/bin" >> $GITHUB_PATH
+
+      - name: Verify agent files
+        run: |
+          echo "Checking agent files..."
+          if [ -f .claude/agents/py-quality.md ]; then
+            echo "✓ py-quality.md found"
+          else
+            echo "✗ py-quality.md NOT found"
+            exit 1
+          fi
 
       - name: Run Python quality analysis with Claude
         id: quality-analysis
