--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -83,7 +83,9 @@ jobs:
       mongodb:
         image: ${{ inputs.enable-mongodb && 'mongo:8.0' || '' }}
         env:
-          MONGO_INITDB_DATABASE: test_iam
+          MONGO_INITDB_ROOT_USERNAME: test_user
+          MONGO_INITDB_ROOT_PASSWORD: test_password
+          MONGO_INITDB_DATABASE: test_db
         ports:
           - 27017:27017
         options: >-
@@ -158,6 +160,12 @@ jobs:
           # Service Settings
           SERVICE_NAME: iam-service
           ENVIRONMENT: ci
+          # MongoDB Settings
+          MONGODB_HOST: localhost
+          MONGODB_PORT: "27017"
+          MONGODB_USER: test_user
+          MONGODB_PASSWORD: test_password
+          MONGODB_DATABASE: test_db
           # Database Settings (PostgreSQL)
           DATABASE_HOST: localhost
           DATABASE_PORT: "5432"
